# codecrafters-interpreter

./: .gitignore  Cargo.toml  README.md
src/: evaluate.rs  lex.rs  lib.rs  main.rs  parse.rs
